2010-01-11  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_env_pref_dialog.c (block_nameservices_signals),
	(populate_panels_from_env), (on_ns_selection_clicked),
	(update_nsswitch_file_widgets):
	Fixed nssswitch file related widgets are shown properly.
	* capplet/nwam_vpn_pref_dialog.c (apply), (vpn_pref_clicked_cb):
	* capplet/nwam_location_dialog.c (apply), (on_button_clicked):
	Updated function name.
	* capplet/nwam_profile_dialog.c (refresh), (cancel):
	Disable editing NCP name if it isn't modifiable.
	* capplet/nwam_wireless_chooser.c (populate_panel),
	(join_wireless):
	Clean code.
	* common/nwamui_daemon.c (nwamui_daemon_init),
	(nwamui_daemon_init_lists), (trigger_scan_if_wireless),
	(nwamui_daemon_append_object), (nwamui_daemon_remove_object),
	(nwamui_daemon_populate_wifi_fav_list), (nwamd_event_handler),
	(nwamui_daemon_handle_object_action_event):
	* common/nwamui_daemon.h:
	Updated function names. Reduce the frequency of scan wifi.
	* common/nwamui_enm.c (nwamui_enm_class_init),
	(nwamui_enm_set_property), (nwamui_enm_get_property),
	(nwamui_enm_new_with_handle), (nwamui_object_real_set_handle),
	(nwamui_object_real_set_active), (nwamui_object_real_set_enabled),
	(nwamui_object_real_get_enabled),
	(nwamui_object_real_set_conditions):
	* common/nwamui_env.c (nwamui_env_class_init),
	(nwamui_env_set_property), (nwamui_env_get_property),
	(nwamui_env_new_with_handle), (nwamui_object_real_clone),
	(nwamui_object_real_set_handle), (nwamui_object_real_set_enabled),
	(nwamui_object_real_get_enabled), (nwamui_object_real_get_active),
	(nwamui_object_real_set_conditions):
	Move properties enable/conditions to NwamuiObject. Clean code.
	* common/nwamui_ncp.c (nwamui_ncp_get_property), (nwamui_ncp_new),
	(nwamui_ncp_new_with_handle), (nwamui_object_real_clone),
	(nwamui_object_real_reload), (nwamui_object_real_set_handle),
	(nwamui_object_real_get_active), (nwamui_object_real_set_active),
	(nwamui_ncp_get_ncu_num), (nwamui_ncp_foreach_ncu_list_store),